--- a/20250903.md
+++ b/20250903.md
@@ -1,2 +1,108 @@
-# Linux-class
+## Linux-class
+
+### telnet 설치하기
+
+dnf install telnet-server<br/>
+dnf install telnet<br/>
+
+#### telnet socket 만들기
+systemctl start telnet.socket<br/>
+*재부팅 시에는 서비스를 다시 시작해야함<br/>
+
+systemctl enable telnet.socket<br/>
+재부팅 시에도 서비스가 켜지도록 설정<br/>
+<br/>
+#### 방화벽 telnet 열기
+firewall-cmd --add-service=telnet<br/>
+*재부팅 시에는 방화벽을 다시 열어줘야함<br/>
+firewall-cmd --runtime-to-permanent<br/>
+<br/>
+#### 텔넷 설치 여부 확인
+rpm -qa telnet<br/>
+
+### SSH
+
+#### ssh키 생성
+ssh-keygen<br/>
+*현재 사용자 이름에만 키가 생성, 다른 사용자로 접속을 시도할 경우 별도로 키 생성<br/>
+<br/>
+*현재 유저 확인<br/>
+whoami(who am i ㄷㄷ)<br/>
+
+#### ssh키 복사
+ssh-copy-id root@192.168.111.200(상대 아이피)<br/>
+<br/>
+
+### SSH 접근 제어
+#### SSH 설정 파일 열기
+vi /etc/ssh/sshd_config<br/>
+<br/>
+vi 편집기 편집모드 -> i
+
+*#으로 쓰여있는것은 막아둔거라 #을 삭제하고 수정<br/>
+
+- 0번 ~ 1023번: 잘 알려진 포트 (well-known port)
+- 1024번 ~ 49151번: 등록된 포트 (registered port)
+- 49152번 ~ 65535번: 동적 포트 (dynamic port)
+<br/><br/>
+
+#### permitRootLogin no
+root 로그인 허용 여부<br/>
+permitRootLogin no<br/>
+<br/>
+
+#### PasswordAuthentication yes
+패스워드 사용 가능 여부<br/>
+<br/>
+
+#### vi 저장 후 나가기
+Esc -> :wq = :x <br/>
+<br/>
+
+*리눅스에서는 하드웨어,소프트웨어 설정을 변경한 후에는 반드시 재시작<br/>
+<br/>
+
+systemctl restart sshd(여기에 재시작할 명령어)<br/>
+d= deamon 데몬, 시스템의 백그라운드에서 작동하는 프로그램<br/><br/>
+
+**window에서 port 변경 <br/>
+ssh -p (포트번호) (ssh목적지)<br/>
+
+#### 변경된 포트로 방화벽 개방
+firewall-cmd --add-port=50001/tcp <br/>
+*방화벽 개방 확인<br/>
+firewall-cmd --list-all<br/><br/>
+
+
+
+
+
+
+
+
+## 디렉터리와 파일 사용법
+
+### 절대 경로명과 상대 경로명
+
+### 절대 경로
+서울특별시 구로구 디지털로 33길 12<br/>
+서울특별시 영등포구 도림로 4세대아파트 103동 802호<br/>
+<br/>
+### 상대 경로
+33길 12<br/>
+103동 802호<br/>
+<br/>
+#### 현재 위치 확인
+pwd <br/>
+
+#### 상위 디렉터리로 이동
+cd ..(마침표 두 개) 상위 디렉터리로 이동<br/>
+cd . 현재 디렉터리로 이동<br/>
+cd rocky = cd ./rocky<br/><br/>
+
+*리눅스는 대부분의 경우에 대소문자를 구분함<br/>
+Case Sensitive<br/>
+Upper Case 대문자<br/>
+Lower Case 소문자<br/>
+<br/>
 
