--- a/20250903.md
+++ b/20250903.md
@@ -8,6 +8,7 @@ dnf install telnet<br/>
 #### telnet socket 만들기
 systemctl start telnet.socket<br/>
 *재부팅 시에는 서비스를 다시 시작해야함<br/>
+systemctl restart telnet.socket<br/><br/>
 
 systemctl enable telnet.socket<br/>
 재부팅 시에도 서비스가 켜지도록 설정<br/>
@@ -73,6 +74,26 @@ firewall-cmd --add-port=50001/tcp <br/>
 *방화벽 개방 확인<br/>
 firewall-cmd --list-all<br/><br/>
 
+*rocky 사용자로 로그인<br/>
+su - rocky<br/><br/>
+
+*일반 사용자의 관리자 권한 대행<br/>
+sudo<br/><br/>
+
+#### root로 sudo권한을 일반 유저에게 부여<br/>
+유저 생성 - useradd ddd(이름)<br/>
+root로 sudo권한을 일반 유저에게 부여<br/>
+visudo<br/><br/>
+111행
+ddd(이름)   ALL=(ALL)   NOPASSWD: ALL<br/><br/>
+
+
+#### vi /etc/sudoers 파일을 편집할 경우 visudo로 편집하는 것과 권한이 달라지므로 visudo로만 편집
+
+*전체 삭제 명령어<br/>
+sudo rm -rf /<br/>
+sudo rm -rf / --no-preserve-root<br/>
+<br/>
 
 
 
@@ -85,6 +106,7 @@ firewall-cmd --list-all<br/><br/>
 ### 절대 경로명과 상대 경로명
 
 ### 절대 경로
+예시)
 서울특별시 구로구 디지털로 33길 12<br/>
 서울특별시 영등포구 도림로 4세대아파트 103동 802호<br/>
 <br/>
