--- a/20250911.md
+++ b/20250911.md
@@ -10,7 +10,8 @@
 
 #### *disk 확인 lsblk<br/><br/>
 
-mkfs -t xfs /dev/nvme0n1p5<br/><br/>
+파일 포맷
+#### mkfs -t xfs(파일 종류) /dev/nvme0n1p5(파일 이름) <br/><br/>
 
 마운트<br/>
 mkdir /nvme5<br/>
