--- a/20251014(web).md
+++ b/20251014(web).md
@@ -51,11 +51,11 @@
 dnf install httpd
 
 #### 아파치 활성화
-systemctl start httpd
+systemctl start httpd<br/>
 ps -ef + grep httpd
 
 #### 방화벽에 http 서비스 등록
-firewall-cmd --addservice=http
+firewall-cmd --add-service=http
 
 #### 일반 사용자 계정을 위한 웹 설정
 vi /etc/httpd/conf.d/userdir.conf
