Mariadb 테이블 생성 및 값
Updated MariaDB activation instructions to include enabling the service.

--- a/20251022(mariadb).md
+++ b/20251022(mariadb).md
@@ -34,7 +34,8 @@
 dnf install mariadb-server
 
 #### MariaDB 활성화 하기
-systemctl start mariadb.service
+systemctl start mariadb.service<br/>
+systemctl --now enable mariadb <br/>
 
 ps -ef | grep mariadb <br/>
 (ps 명령으로 확인)<br/>
