NLS 서버와 DHCP로 IP 받기

--- a/20251111(NLS.DHCP).md
+++ b/20251111(NLS.DHCP).md
@@ -49,7 +49,7 @@ firewall-cmd --runtime-to-permanent<br/>
 #### Server B2
 
 dnf -y install ypbind yp-tools oddjob-mkhomedir<br/>
-nisdomainname 4gi.io<br/>
+nisdomainname 4gl.io<br/>
 <br/>
 
 vi /etc/sysconfig/network<br/>
@@ -64,8 +64,8 @@ vi /etc/yp.conf
 
 systemctl --now enable rpcbind ypbind nis-domainname oddjobd<br/>
 
-authselect select nis --force
-authselect enable-feature with-mkhomedir
+authselect select nis --force<br/>
+authselect enable-feature with-mkhomedir<br/>
 
 systemctl restart rpcbind ypbind nis-domainname oddjobd
 
