NIS 서버와 DHCP로 IP 받기
Corrected hostnames and added commands for setting them.

--- a/20251111(NIS.DHCP).md
+++ b/20251111(NIS.DHCP).md
@@ -1,14 +1,16 @@
 ## 인증 서버 (로그인 서버)
 
-### NLS 서버
+### NIS 서버
 
 *썬 마이크로 시스템즈
 
 rpcbind 패키지를 필요
 
-#### Server B - NLS 서버 , Server B2 - NLS 클라이언트
+#### Server B - NIS 서버 , Server B2 - NIS 클라이언트
 
-A,B 서버에 특정 호스트 이름을 부여
+B,B2 서버에 특정 호스트 이름을 부여<br/>
+hostnamectl set-hostname nis.4gl.io (Server B)<br/>
+hostanemctl set-hostname nis_client.4gl.io (Server B2)<br/>
 
 #### Server B,B2
 
